tests/baselines/reference/operationsAvailableOnPromisedType.errors.txt
tests/cases/compiler/operationsAvailableOnPromisedType.ts(11,9): error TS2766: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(12,5): error TS2765: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(13,5): error TS2763: Operator '+' cannot be applied to types 'number' and 'Promise<number>'. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(14,5): error TS2763: Operator '>' cannot be applied to types 'number' and 'Promise<number>'. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(15,5): error TS2764: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(16,7): error TS2764: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(17,5): error TS2776: This condition will always return 'false' since the types 'number' and 'Promise<number>' have no overlap. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(18,9): error TS2769: Type 'Promise<string[]>' is not an array type. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(19,21): error TS2770: Type 'Promise<string[]>' is not an array type or a string type. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(20,9): error TS2554: Expected 7 arguments, but got 4.
tests/cases/compiler/operationsAvailableOnPromisedType.ts(21,11): error TS2570: Property 'prop' does not exist on type 'Promise<{ prop: string; }>'. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(23,27): error TS2770: Type 'Promise<string[]>' is not an array type or a string type. Did you forget to use 'await'?
tests/cases/compiler/operationsAvailableOnPromisedType.ts(24,5): error TS2774: This expression is not callable. Did you forget to use 'await'?
  Type 'Promise<() => void>' has no call signatures.
tests/cases/compiler/operationsAvailableOnPromisedType.ts(25,5): error TS2774: This expression is not callable. Did you forget to use 'await'?
  Not all constituents of type 'Promise<() => void> | (() => void)' are callable.
    Type 'Promise<() => void>' has no call signatures.
tests/cases/compiler/operationsAvailableOnPromisedType.ts(26,9): error TS2775: This expression is not constructable. Did you forget to use 'await'?
  Type 'Promise<new () => any>' has no construct signatures.
tests/cases/compiler/operationsAvailableOnPromisedType.ts(27,5): error TS2349: This expression is not callable.
  Type 'Promise<number>' has no call signatures.


==== tests/cases/compiler/operationsAvailableOnPromisedType.ts (16 errors) ====
    async function fn(
        a: number,
        b: Promise<number>,
        c: Promise<string[]>,
        d: Promise<{ prop: string }>,
        e: Promise<() => void>,
        f: Promise<() => void> | (() => void),
        g: Promise<{ new(): any }>
    ) {
        // All errors
        a | b;
            ~
!!! error TS2766: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
        b | a;
        ~
!!! error TS2765: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
        a + b;
        ~~~~~
!!! error TS2763: Operator '+' cannot be applied to types 'number' and 'Promise<number>'. Did you forget to use 'await'?
        a > b;
        ~~~~~
!!! error TS2763: Operator '>' cannot be applied to types 'number' and 'Promise<number>'. Did you forget to use 'await'?
        b++;
        ~
!!! error TS2764: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
        --b;
          ~
!!! error TS2764: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type. Did you forget to use 'await'?
        a === b;
        ~~~~~~~
!!! error TS2776: This condition will always return 'false' since the types 'number' and 'Promise<number>' have no overlap. Did you forget to use 'await'?
        [...c];
            ~
!!! error TS2769: Type 'Promise<string[]>' is not an array type. Did you forget to use 'await'?
        for (const s of c) {
                        ~
!!! error TS2770: Type 'Promise<string[]>' is not an array type or a string type. Did you forget to use 'await'?
            fn(b, b, c, d);
            ~~~~~~~~~~~~~~
!!! error TS2554: Expected 7 arguments, but got 4.
!!! related TS6210 tests/cases/compiler/operationsAvailableOnPromisedType.ts:6:5: An argument for 'e' was not provided.
            d.prop;
              ~~~~
!!! error TS2570: Property 'prop' does not exist on type 'Promise<{ prop: string; }>'. Did you forget to use 'await'?
        }
        for await (const s of c) {}
                              ~
!!! error TS2770: Type 'Promise<string[]>' is not an array type or a string type. Did you forget to use 'await'?
        e();
        ~
!!! error TS2774: This expression is not callable. Did you forget to use 'await'?
!!! error TS2774:   Type 'Promise<() => void>' has no call signatures.
        f();
        ~
!!! error TS2774: This expression is not callable. Did you forget to use 'await'?
!!! error TS2774:   Not all constituents of type 'Promise<() => void> | (() => void)' are callable.
!!! error TS2774:     Type 'Promise<() => void>' has no call signatures.
        new g();
            ~
!!! error TS2775: This expression is not constructable. Did you forget to use 'await'?
!!! error TS2775:   Type 'Promise<new () => any>' has no construct signatures.
        b();
        ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'Promise<number>' has no call signatures.
    }
    